tests/backslashes-in-string-4.c.err
./tests/backslashes-in-string-4.c:13:24: error: Unescaped newline in string
